--- a/docs/wearables/sdks/authentication.mdx
+++ b/docs/wearables/sdks/authentication.mdx
@@ -125,9 +125,8 @@ Vital Sign-In Token sign-in with the Vital Mobile SDK. Once signed-in, Vital Mob
 ## Vital API Keys
 
 <Warning>
-API Key is **strongly discouraged** for production mobile apps, since your API Key would be
-effectively publicly distributed in cleartext. API Key support is intended only for customer
-early evaluation in Sandbox.
+API Key is **discouraged** for production mobile apps, since it would be distributed as cleartext.
+API Key support is intended only for customer early evaluation in Sandbox.
 
 Use [Vital Sign-In Token](#vital-sign-in-tokens) whenever possible.
 </Warning>
@@ -144,7 +143,7 @@ Please refer to the specific SDK guide:
 ## Migrate from Vital API Keys to Vital Sign-In Tokens
 
 <Warning>
-Always use [Vital Sign-In Token](#vital-sign-in-tokens) for your production environment.
+Always use [Vital Sign-In Token](#vital-sign-in-tokens) for your production mobile apps.
 </Warning>
 
 An existing app installation signed-in with Vital API Key + User ID can be seamlessly migrated to
