--- a/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-availability.mdx
+++ b/docs/api-reference/lab-testing-at-home-phlebotomy/appointment-availability.mdx
@@ -1,22 +1,21 @@
 ---
-openapi: "POST /v3/order/{order_id}/phlebotomy/appointment/availability"
+openapi: "POST /v3/order/phlebotomy/appointment/availability"
 ---
 
 <RequestExample>
 
 ```bash cURL
 curl --request POST \
-     --url '{{BASE_URL}}/v3/order/413d7205-f8a9-42ed-aa4a-edb99e481ca0/phlebotomy/appointment/availability' \
+     --url '{{BASE_URL}}/v3/order/phlebotomy/appointment/availability' \
      --header 'accept: application/json' \
      --header 'x-vital-api-key: {YOUR_KEY}' \
      --data '
 {
-    "first_line": "West Lincoln Street",
-    "second_line": "",
+    "first_line": "256 West Lincoln Street",
+    "second_line": "14",
     "city": "Phoenix",
     "state": "AZ",
     "zip_code": "85004",
-    "unit": "14",
 }
 '
 ```
@@ -32,15 +31,12 @@ client = Client(
 
 data = client.AtHomePhlebotomy.appointment_availability(
     order_id="413d7205-f8a9-42ed-aa4a-edb99e481ca0",
-    # Optional: use only if address differs from the
-    # one given when placing the order.
     address={
-        "first_line": "West Lincoln Street",
-        "second_line": "",
+        "first_line": "256 West Lincoln Street",
+        "second_line": "14",
         "city": "Phoenix",
         "state": "AZ",
         "zip_code": "85004",
-        "unit": "14",
     },
 )
 ```
@@ -56,15 +52,12 @@ const client = new VitalClient({
 
 const data = await client.AtHomePhlebotomy.appointmentAvailability(
     "413d7205-f8a9-42ed-aa4a-edb99e481ca0",
-    // Optional: use only if address differs from the
-    // one given when placing the order.
     {
-        "first_line": "West Lincoln Street",
-        "second_line": "",
+        "first_line": "256 West Lincoln Street",
+        "second_line": "14",
         "city": "Phoenix",
         "state": "AZ",
         "zip_code": "85004",
-        "unit": "14",
     }
 );
 ```
