feat: Add at-home-phlebotomy section

--- a/docs/event-catalog/labtest.appointment.updated.mdx
+++ b/docs/event-catalog/labtest.appointment.updated.mdx
@@ -1,10 +1,10 @@
 ---
-title: "labtest.appointment.update"
+title: "labtest.appointment.updated"
 description: "An apppointment has been updated or created"
 ---
 # Properties
 <ResponseField name="event_type" type="const string" required="true">
-Constant: `labtest.appointment.update`
+Constant: `labtest.appointment.updated`
 </ResponseField>
 <ResponseField name="data" type="ClientFacingAppointment" required="true">
 <Expandable title="ClientFacingAppointment" defaultOpen="true">
