feat: Add subtitles to default comns section

--- a/docs/lab/at-home-phlebotomy/communications.mdx
+++ b/docs/lab/at-home-phlebotomy/communications.mdx
@@ -18,6 +18,9 @@ Each of these has a different set of content and status changes that trigger the
 If both SMS and Email communications are enabled, there will both be emails sent from Vital related to the appointment statuses,
 as well as SMS messages.
 
+
+### SMS Messages
+
 A table of the **Order Status** and **default SMS messages** is provided bellow:
 
 | Order Status | Default Message |
@@ -28,6 +31,8 @@ A table of the **Order Status** and **default SMS messages** is provided bellow:
 | `cancelled` | _"Hey, your order for the **team_name** at-home-phlebotomy appointment has be cancelled. If this is by accident please contact support."_ |
 
 <Info>SMS Texts are customizable, and can be enabled or disabled individually.</Info>
+
+### Emails
 
 For emails, the following table describes what information each email contains for each Order Statuses:
 | Order Status | Email Content Description |
