--- a/docs/lab/at-home-phlebotomy/overview.mdx
+++ b/docs/lab/at-home-phlebotomy/overview.mdx
@@ -18,15 +18,15 @@ with the chosen Laboratory.
 phlebotomy partners.
 - At the day of the appointment, our partner phlebotomist will contact the patient directly to assert that everything
 is correct for carrying out the appointment.
-- The phlebotomis goes to the appointment, draws the patient blood and then delivers it to the Laboratory.
+- The phlebotomist goes to the appointment, draws the patient blood and then delivers it to the Laboratory.
 - The Laboratory process the patient blood sample and generate the required results.
-- Vital exposes the results via API as soon as they are available, both on PDF and Strutctured data via API.
+- Vital exposes the results via API as soon as they are available, both on PDF and structured data via API.
 
 
 ## Constraints
 
 - Phlebotomy appointments are not supported for patients under 18 years of age.
-- The same patient can't have more than one active appointment in a specific **Phlebotomy provider**.
+- The same patient can't have more than one active appointment with a specific **Phlebotomy provider**.
 - The addresses provided when fetching the appointment availability slots must be reachable by the phlebotomist, containing street number and unit (if exists).
 
 
