--- a/docs/lab/at-home-phlebotomy/communications.mdx
+++ b/docs/lab/at-home-phlebotomy/communications.mdx
@@ -3,7 +3,7 @@ title: "Communications"
 ---
 
 Communication for patients is done via email or SMS, for At-Home Phlebotomy orders.
-Our customers have the following options when setting this up:
+Customers have the following options when setting this up:
 
 - `Default` - Email and SMS communications are enabled.
 - `SMS Only` - Only SMS communication is enabled.
