--- a/docs/api-reference/results/get-results.mdx
+++ b/docs/api-reference/results/get-results.mdx
@@ -62,26 +62,34 @@ const data = await client.LabTests.Results.getResults("<order_id>");
       "slug": "hemoglobin",
       "unit": "g/dL",
       "notes": null,
-      "value": 18.9,
+      "value": 18.9, # deprecated
       "timestamp": null,
       "max_range_value": 17.7,
       "min_range_value": 13.0,
       "is_above_max_range": true,
       "is_below_min_range": false,
-      "interpretation": "abnormal"
+      "interpretation": "abnormal",
+      "result": "18.90",
+      "type": "numeric",
+      "loinc": "0001-1",
+      "loinc_slug": "hemoglobin-mass-vol"
     },
     {
       "name": "Sodium",
       "slug": "unknown",
       "unit": "mmol/L",
       "notes": null,
-      "value": 136,
+      "value": 136, # deprecated
       "timestamp": null,
       "max_range_value": 144,
       "min_range_value": 134,
       "is_above_max_range": false,
       "is_below_min_range": false,
-      "interpretation": "normal"
+      "interpretation": "normal",
+      "result": "136",
+      "type": "numeric",
+      "loinc": "0001-2",
+      "loinc_slug": "sodium"
     }
   ]
 }
