[VIT-4761] Add hr_dip to sleep summary and update event_catalog

--- a/docs/api-reference/sleep/get-summary.mdx
+++ b/docs/api-reference/sleep/get-summary.mdx
@@ -49,6 +49,7 @@ data = client.Sleep.get(
       "deep": 2400,
       "hr_lowest": 43,
       "hr_average": 50,
+      "hr_dip": 19.7,
       "efficiency": 0.97,
       "latency": 1000,
       "temperature_delta": -0.2,
