[VIT-4875] Add kardia to beta integrations and move polar to regular

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -37,6 +37,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Whoop](https://www.whoop.com)                       | `whoop`           | Your Personal Digital Fitness and Health Coach                | Password authentication                                                              |
 | [Withings](https://www.withings.com)                 | `withings`        | Fitness scales, watches and health monitors                   | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 | [Zwift](https://zwift.com)                           | `zwift`           | Virtual cycling and running                                   | Password authentication                                                              |
+| [Polar](https://www.polar.com/accesslink-api/)       | `polar`           | Finnish sports tech pioneer                                   | Vital branded OAuth, or [BYOO](/wearables/connecting-providers/bring_your_own_oauth) |
 
 ### SDK Based Providers
 
@@ -56,8 +57,8 @@ We currently Support over 300+ devices, a full list can be seen below.
 | Provider                                                               | Slug             | Description                                |
 | ---------------------------------------------------------------------- | ---------------- | ------------------------------------------ |
 | [Android Health Connect](https://developer.android.com/health-connect) | `health_connect` | Health and fitness data on Android devices |
-| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)    | `polar`          | Finnish sports tech pioneer                |
 | [Cronometer](https://www.cronometer.com)                               | `cronometer`     | Nutrition data                             |
+| [Kardia](https://kardia.com/)                                          | `kardia`         | Electrocardiogram readings                 |
 
 **Planned**: On our roadmap
 
