--- a/docs/api-reference/lab-testing/lab-test-markers.mdx
+++ b/docs/api-reference/lab-testing/lab-test-markers.mdx
@@ -3,7 +3,7 @@ title: "Get Markers for Lab Test"
 openapi: "GET /v3/lab_tests/{id}/markers"
 ---
 
-<ResponseExample>
+<RequestExample>
 
 ```bash cURL
 curl --request GET \
@@ -11,6 +11,10 @@ curl --request GET \
      --header 'accept: application/json' \
      --header 'x-vital-api-key: {YOUR_KEY}'
 ```
+
+</RequestExample>
+
+<ResponseExample>
 
 ```json Response
 {
