--- a/docs/api-reference/lab-testing/lab-test-markers.mdx
+++ b/docs/api-reference/lab-testing/lab-test-markers.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Get Markers for Lab Test"
-openapi: "GET /v3/lab_tests/{id}/markers"
+openapi: "GET /v3/lab_tests/{lab_test_id}/markers"
 ---
 
 <RequestExample>
