--- a/docs/lab/at-home-phlebotomy/webhooks.mdx
+++ b/docs/lab/at-home-phlebotomy/webhooks.mdx
@@ -71,7 +71,7 @@ The webhook payload body will have the following information if the Order is in 
 ## Appointment webhook events
 
 Based on the status present in [`Order and Appointment Lifecycle - Appointment Lifecycle`](/lab/at-home-phlebotomy/order-appointment-lifecycle#appointment-lifecycle),
-Vital will trigger the [`labtest.appointment.updated`](/event-catalog/labtest.appointment.updated) webhook event.
+Vital will trigger the [`labtest.appointment.updated`](/event-catalog/labtest.appointment.update) webhook event.
 
 <Info>
     The `labtest.appointment.updated` event is triggered for all possible appointment statuses, and is the **recommended** way of integrating to fetch all
