--- a/docs/api-reference/lab-testing/lab-test-markers.mdx
+++ b/docs/api-reference/lab-testing/lab-test-markers.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Get Markers for Lab Test"
-openapi: "GET /v3/lab_tests/{lab_test_id}/markers"
+openapi: "GET /v3/lab_tests/{lab_test_id}/markers/"
 ---
 
 <RequestExample>
 
 ```bash cURL
 curl --request GET \
-     --url '{{BASE_URL}}/v3/lab_tests/{id}/markers' \
+     --url '{{BASE_URL}}/v3/lab_tests/{lab_test_id}/markers' \
      --header 'accept: application/json' \
      --header 'x-vital-api-key: {YOUR_KEY}'
 ```
