--- a/docs/api-reference/lab-testing/lab-test-markers.mdx
+++ b/docs/api-reference/lab-testing/lab-test-markers.mdx
@@ -18,36 +18,66 @@ curl --request GET \
 
 ```json Response
 {
-    "expected_results": [
-        {
-            "id": 1,
-            "name": "Hemoglobin A1c",
-            "slug": "hemoglobin-a1c",
-            "description": "Hemoglobin A1c is a form of hemoglobin that is measured "
-            "identify your average blood sugar levels over the past 3 months.",
-            "lab_id": 1,
-            "provider_id": "1234",
-            "type": "biomarker",
-            "unit": "%",
-            "price": "10.00",
-            "expected_results": [
-                {
-                    "id": 1,
-                    "name": "Hemoglobin A1c",
-                    "slug": "hemoglobin-a1c",
-                    "lab_id": 1,
-                    "provider_id": "1234",
-                    "loinc": {
-                        "id": 1,
-                        "name": "HbA1c (Bld) [Mass fraction]",
-                        "slug": "hba1c-bld-mass-fraction",
-                        "code": "4548-4",
-                        "unit": "%",
-                    },
-                }
-            ],
-        }
-    ]
+  "markers": [
+      {
+          "id": 202,
+          "name": "Acetylcholine Receptor (AChR) Antibodies, Complete Profile with Reflex to MuSK Antibodies",
+          "slug": "acetylcholine-receptor-achr-antibodies-complete-profile-with-reflex-to-musk-antibodies",
+          "description": "Acetylcholine Receptor (AChR) Antibodies, Complete Profile with Reflex to MuSK Antibodies",
+          "lab_id": 6,
+          "provider_id": "165605",
+          "type": "biomarker",
+          "unit": null,
+          "price": "N/A",
+          "expected_results": [
+              {
+                  "id": 2938,
+                  "name": "AChR Blocking Abs, Serum",
+                  "slug": "achr-blocking-abs-serum",
+                  "lab_id": 6,
+                  "provider_id": "085927",
+                  "loinc": {
+                      "id": 3514,
+                      "name": "Acetylcholine receptor blocking Ab Qn (S)",
+                      "slug": "acetylcholine-receptor-blocking-ab-qn-s",
+                      "code": "11561-8",
+                      "unit": "%{inhibition}"
+                  }
+              },
+              {
+                  "id": 2939,
+                  "name": "AChR Binding Abs, Serum",
+                  "slug": "achr-binding-abs-serum",
+                  "lab_id": 6,
+                  "provider_id": "085904",
+                  "loinc": {
+                      "id": 3174,
+                      "name": "Acetylcholine receptor binding Ab (S) [Moles/Vol]",
+                      "slug": "acetylcholine-receptor-binding-ab-s-moles-vol",
+                      "code": "11034-6",
+                      "unit": "nmol/L"
+                  }
+              },
+              {
+                  "id": 2940,
+                  "name": "AChR-modulating Ab",
+                  "slug": "achr-modulating-ab",
+                  "lab_id": 6,
+                  "provider_id": "505199",
+                  "loinc": {
+                      "id": 61121,
+                      "name": "Acetylcholine receptor modulation Ab FC Ql (S)",
+                      "slug": "acetylcholine-receptor-modulation-ab-fc-ql-s",
+                      "code": "99062-2",
+                      "unit": null
+                  }
+              }
+          ]
+      },
+  ],
+  "total": 2,
+  "page": 1,
+  "size": 2
 }
 ```
 
