--- a/docs/lab/results/result-formats.mdx
+++ b/docs/lab/results/result-formats.mdx
@@ -103,9 +103,9 @@ Interpretation is a string value that can be one of the following:
 3. `Interpretation.CRITICAL` - The result is outside of critical parameters.
     In this case, refer to the [critical values](/lab/workflow/lab-test-lifecycle#critical-results) section.
 
-#### LOINC
+#### Standardisation - LOINC
 
-As it is possible to test the same biomarkers across different laboratories, there must be a way to match results across them. For this, we follow the LOINC standard.
+It's possible to test the same biomarkers across different laboratories. For these to match, we use the [LOINC](https://loinc.org/) standard.
 
 In the `BiomarkerResult` object, you can see two fields `loinc_slug` and `loinc`. These fields refer to the LOINC standard. Customers should use this standard, so it's possible to match results across different laboratories.
 You can expect that the `slug` field is what the laboratory returns to us - and the `loinc_slug` is the standardised version.
